--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,38 @@
 bin/**
 obj/**
 Properties/**
-*.csproj
-*.sln
+
+# User-specific files
+*.rsuser
 *.suo
 *.user
+*.userosscache
+*.sln.docstates
+
+# Build results
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]elease/
+[Rr]eleases/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Bb]in/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
+
+# Visual Studio 2015/2017 cache/options directory
+.vs/
+
+# Visual Studio 2017 auto generated files
+Generated\ Files/
+
+# MSTest test Results
+[Tt]est[Rr]esult*/
+[Bb]uild[Ll]og.*
+
+# Uncomment if you have tasks that create the project's static files in wwwroot
+#wwwroot/
